Fix _FilterIISAssets Cycle with GenerateOutDir due to ResolvedFileToPublish

--- a/src/WebSdk/Publish/Targets/CopyTargets/Microsoft.NET.Sdk.Publish.FilterFiles.targets
+++ b/src/WebSdk/Publish/Targets/CopyTargets/Microsoft.NET.Sdk.Publish.FilterFiles.targets
@@ -17,6 +17,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
   <!-- Target _FilterIISAssets -->
   <!--********************************************************************-->
   <Target Name="_FilterIISAssets"
+          PrecomputeMerge="GenerateOutDir"
           Condition="'$(PublishIISAssets)' == 'false'"
           AfterTargets="ComputeResolvedFilesToPublishList"
           BeforeTargets="CopyFilesToPublishDirectory">
