--- a/src/StaticWebAssetsSdk/Targets/Microsoft.NET.Sdk.StaticWebAssets.targets
+++ b/src/StaticWebAssetsSdk/Targets/Microsoft.NET.Sdk.StaticWebAssets.targets
@@ -491,13 +491,7 @@ Copyright (c) .NET Foundation. All rights reserved.
 
     </PropertyGroup>
 
-    <MakeDir
-      Directories="$(_StaticWebAssetsManifestBase)"
-      Condition="!Exists('$(_StaticWebAssetsManifestBase)')" />
-
-    <MakeDir
-      Directories="$(_StaticWebAssetsIntermediateOutputPath)"
-      Condition="!Exists('$(_StaticWebAssetsIntermediateOutputPath)')" />
+    <MakeDir Directories="$(_StaticWebAssetsManifestBase);$(_StaticWebAssetsIntermediateOutputPath)"/>
   </Target>
 
   <!-- Build -->
